[gd_scene load_steps=40 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Target.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/background.png" type="Texture" id=3]
[ext_resource path="res://tileset.tres" type="TileSet" id=4]
[ext_resource path="res://sprites/hero/HERO_JUMP2.png" type="Texture" id=5]
[ext_resource path="res://sprites/hero/HERO_JUMP1.png" type="Texture" id=6]
[ext_resource path="res://sprites/keys/Ctrl-Key.png" type="Texture" id=7]
[ext_resource path="res://sprites/hero/HERO_WALK5.png" type="Texture" id=8]
[ext_resource path="res://sprites/hero/HERO_WALK6.png" type="Texture" id=9]
[ext_resource path="res://sprites/hero/HERO_WALK3.png" type="Texture" id=10]
[ext_resource path="res://sprites/hero/HERO_WALK4.png" type="Texture" id=11]
[ext_resource path="res://sprites/hero/HERO_WALK2.png" type="Texture" id=12]
[ext_resource path="res://sprites/hero/HERO_WALK1.png" type="Texture" id=13]
[ext_resource path="res://World.gd" type="Script" id=14]
[ext_resource path="res://door/LinkedinDoor.tscn" type="PackedScene" id=15]
[ext_resource path="res://sprites/keys/UP_ARROW.png" type="Texture" id=16]
[ext_resource path="res://sprites/keys/Space-Key.png" type="Texture" id=17]
[ext_resource path="res://segoeuil.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://sprites/keys/LEFT_ARROW.png" type="Texture" id=19]
[ext_resource path="res://sprites/keys/RIGHT_ARROW.png" type="Texture" id=20]
[ext_resource path="res://door/GithubDoor.tscn" type="PackedScene" id=21]
[ext_resource path="res://sprites/End Portal Open.png" type="Texture" id=22]
[ext_resource path="res://sprites/corpse_drain.png" type="Texture" id=23]
[ext_resource path="res://sprites/cutthroat.png" type="Texture" id=24]
[ext_resource path="res://sprites/hero/HERO_ATTACK7.png" type="Texture" id=25]
[ext_resource path="res://sprites/hero/HERO_ATTACK6.png" type="Texture" id=26]
[ext_resource path="res://sprites/hero/HERO_ATTACK3.png" type="Texture" id=27]
[ext_resource path="res://sprites/hero/HERO_ATTACK1.png" type="Texture" id=28]
[ext_resource path="res://sprites/hero/HERO_ATTACK5.png" type="Texture" id=29]
[ext_resource path="res://sprites/hero/HERO_ATTACK8.png" type="Texture" id=30]
[ext_resource path="res://sprites/hero/HERO_ATTACK2.png" type="Texture" id=31]
[ext_resource path="res://sprites/hero/HERO_ATTACK4.png" type="Texture" id=32]
[ext_resource path="res://sprites/medit2te.png" type="Texture" id=33]
[ext_resource path="res://door/Door.tscn" type="PackedScene" id=34]

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 18 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 31 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 30 ) ],
"loop": true,
"name": "default",
"speed": 13.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 2
font_data = ExtResource( 18 )

[node name="World" type="Node"]
script = ExtResource( 14 )

[node name="Instructions" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Instructions"]
margin_left = -1789.12
margin_top = 119.956
margin_right = -1425.12
margin_bottom = 184.956
custom_fonts/font = SubResource( 2 )
text = "Arrow keys to move!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Instructions"]
margin_left = -1374.45
margin_top = 119.303
margin_right = -1045.45
margin_bottom = 184.303
custom_fonts/font = SubResource( 2 )
text = "Up to enter portal!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Instructions"]
margin_left = -1879.77
margin_top = 380.0
margin_right = -1571.77
margin_bottom = 445.0
custom_fonts/font = SubResource( 2 )
text = "Ctrl key to attack!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Sprite" parent="Instructions"]
position = Vector2( -1728, 460 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 96, 32 )

[node name="Label3" type="Label" parent="Instructions"]
margin_left = -1314.14
margin_top = 380.0
margin_right = -975.144
margin_bottom = 445.0
custom_fonts/font = SubResource( 2 )
text = "Space bar to jump!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key2" type="Sprite" parent="Instructions"]
position = Vector2( -1152, 460 )
scale = Vector2( 2, 2 )
texture = ExtResource( 17 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 128, 32 )

[node name="Sprite" type="AnimatedSprite" parent="Instructions"]
position = Vector2( -1723.26, 353.567 )
scale = Vector2( 3, 3 )
frames = SubResource( 3 )
frame = 5
playing = true

[node name="Sprite2" type="AnimatedSprite" parent="Instructions"]
position = Vector2( -1145.32, 351.046 )
scale = Vector2( 3, 3 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="End Portal Open" type="Sprite" parent="Instructions"]
position = Vector2( -1308.65, 212.739 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 22 )
vframes = 7
hframes = 6
frame = 31

[node name="Sprite3" type="AnimatedSprite" parent="Instructions"]
position = Vector2( -1496.69, 213.583 )
scale = Vector2( 3, 3 )
frames = SubResource( 5 )
frame = 1
playing = true

[node name="Node2D" type="Node2D" parent="Instructions"]
position = Vector2( -1936.43, -200.741 )
scale = Vector2( 2, 2 )

[node name="Key" type="Sprite" parent="Instructions/Node2D"]
position = Vector2( 360.434, 210.094 )
texture = ExtResource( 16 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 64, 32 )

[node name="Key2" type="Sprite" parent="Instructions/Node2D"]
position = Vector2( 146.227, 209.321 )
texture = ExtResource( 19 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 64, 32 )

[node name="Key3" type="Sprite" parent="Instructions/Node2D"]
position = Vector2( 180.29, 209.022 )
texture = ExtResource( 20 )
hframes = 2
region_enabled = true
region_rect = Rect2( 0, 0, 64, 32 )

[node name="Welcome " type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Welcome "]
margin_left = -957.823
margin_top = -238.718
margin_right = -271.823
margin_bottom = 48.2815
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Welcome /VBoxContainer"]
margin_right = 686.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
text = "Booga's Welcome of Fate"

[node name="HBoxContainer" type="HBoxContainer" parent="Welcome /VBoxContainer"]
margin_top = 127.0
margin_right = 686.0
margin_bottom = 287.0
custom_constants/separation = 40
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="Welcome /VBoxContainer/HBoxContainer"]
margin_left = 63.0
margin_right = 223.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
texture = ExtResource( 24 )
expand = true

[node name="TextureRect3" type="TextureRect" parent="Welcome /VBoxContainer/HBoxContainer"]
margin_left = 263.0
margin_right = 423.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
texture = ExtResource( 33 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Welcome /VBoxContainer/HBoxContainer"]
margin_left = 463.0
margin_right = 623.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
texture = ExtResource( 23 )
expand = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( -524268, 0, 1, -524267, 0, 2, -458732, 0, 131073, -458731, 0, 131074, -393196, 0, 131073, -393195, 0, 131074, -262193, 0, 1, -262192, 0, 65536, -262191, 0, 65536, -262190, 0, 65536, -262189, 0, 65536, -262188, 0, 65536, -262187, 0, 65536, -262186, 0, 65536, -262185, 0, 65536, -262184, 0, 65536, -262183, 0, 65536, -262182, 0, 65536, -262181, 0, 65536, -262180, 0, 65536, -262179, 0, 65536, -262178, 0, 65536, -262177, 0, 65536, -262176, 0, 65536, -262175, 0, 65536, -262174, 0, 65536, -262173, 0, 65536, -262172, 0, 2, -327660, 0, 131073, -327659, 0, 131074, -327646, 0, 5, -196657, 0, 131073, -196656, 0, 196619, -196655, 0, 196619, -196654, 0, 196619, -196653, 0, 196619, -196652, 0, 196619, -196651, 0, 196619, -196650, 0, 196619, -196649, 0, 196619, -196648, 0, 196619, -196647, 0, 196619, -196646, 0, 196619, -196645, 0, 196619, -196644, 0, 196619, -196643, 0, 196619, -196642, 0, 196619, -196641, 0, 196619, -196640, 0, 196619, -196639, 0, 196619, -196638, 0, 196619, -196637, 0, 196619, -196636, 0, 131074, -262124, 0, 131073, -262123, 0, 131074, -262111, 0, 1, -262110, 0, 131082, -262109, 0, 2, -131121, 0, 65537, -131120, 0, 131072, -131119, 0, 131072, -131118, 0, 131072, -131117, 0, 131072, -131116, 0, 131072, -131115, 0, 131072, -131114, 0, 4, -131113, 0, 3, -131112, 0, 131072, -131111, 0, 131072, -131110, 0, 131072, -131109, 0, 131072, -131108, 0, 131072, -131107, 0, 131072, -131106, 0, 131072, -131105, 0, 131072, -131104, 0, 131072, -131103, 0, 131072, -131102, 0, 131072, -131101, 0, 131072, -131100, 0, 65538, -196588, 0, 131073, -196587, 0, 131074, -196575, 0, 131073, -196574, 0, 196619, -196573, 0, 131074, -65578, 0, 131073, -65577, 0, 131074, -131052, 0, 131073, -131051, 0, 65539, -131050, 0, 65536, -131049, 0, 65536, -131048, 0, 65536, -131047, 0, 65536, -131046, 0, 65536, -131045, 0, 2, -131041, 0, 1, -131040, 0, 65536, -131039, 0, 65540, -131038, 0, 196619, -131037, 0, 65539, -131036, 0, 65536, -131035, 0, 65536, -131034, 0, 65536, -131033, 0, 65536, -131032, 0, 65536, -131031, 0, 65536, -131030, 0, 65536, -131029, 0, 65536, -131028, 0, 65536, -131027, 0, 2, -42, 0, 131073, -41, 0, 131074, -65516, 0, 65537, -65515, 0, 131072, -65514, 0, 131072, -65513, 0, 131072, -65512, 0, 131072, -65511, 0, 131072, -65510, 0, 131072, -65509, 0, 65538, -65505, 0, 131073, -65504, 0, 196619, -65503, 0, 196619, -65502, 0, 196619, -65501, 0, 196619, -65500, 0, 196619, -65499, 0, 196619, -65498, 0, 196619, -65497, 0, 196619, -65496, 0, 196619, -65495, 0, 196619, -65494, 0, 196619, -65493, 0, 196619, -65492, 0, 196619, -65491, 0, 131074, 65494, 0, 131073, 65495, 0, 131074, 30, 0, 1, 31, 0, 65540, 32, 0, 196619, 33, 0, 196619, 34, 0, 196619, 35, 0, 196619, 36, 0, 196619, 37, 0, 196619, 38, 0, 196619, 39, 0, 196619, 40, 0, 196619, 41, 0, 196619, 42, 0, 196619, 43, 0, 196619, 44, 0, 196619, 45, 0, 131074, 131030, 0, 131073, 131031, 0, 131074, 65565, 0, 1, 65566, 0, 65540, 65567, 0, 196619, 65568, 0, 196619, 65569, 0, 196619, 65570, 0, 196619, 65571, 0, 196619, 65572, 0, 196619, 65573, 0, 196619, 65574, 0, 196619, 65575, 0, 196619, 65576, 0, 196619, 65577, 0, 196619, 65578, 0, 196619, 65579, 0, 196619, 65580, 0, 196619, 65581, 0, 131074, 196566, 0, 131073, 196567, 0, 131074, 131087, 0, 196608, 131088, 0, 196609, 131089, 0, 196609, 131090, 0, 196609, 131091, 0, 196609, 131092, 0, 196609, 131093, 0, 196609, 131094, 0, 196609, 131095, 0, 196609, 131096, 0, 196609, 131097, 0, 196609, 131098, 0, 196609, 131099, 0, 196609, 131100, 0, 196609, 131101, 0, 196614, 131102, 0, 196619, 131103, 0, 196619, 131104, 0, 196619, 131105, 0, 196619, 131106, 0, 196619, 131107, 0, 196619, 131108, 0, 196619, 131109, 0, 196619, 131110, 0, 196619, 131111, 0, 196619, 131112, 0, 196619, 131113, 0, 196619, 131114, 0, 196619, 131115, 0, 196619, 131116, 0, 196619, 131117, 0, 131074, 262097, 0, 1, 262098, 0, 65536, 262099, 0, 65536, 262100, 0, 65536, 262101, 0, 65536, 262102, 0, 65540, 262103, 0, 196615, 262104, 0, 196609, 262105, 0, 196609, 262106, 0, 196609, 262107, 0, 196609, 262108, 0, 196609, 262109, 0, 196609, 262110, 0, 196609, 262111, 0, 196609, 262112, 0, 196609, 262113, 0, 196609, 262114, 0, 196609, 262115, 0, 196609, 262116, 0, 196610, 262126, 0, 196608, 262127, 0, 196609, 262128, 0, 196609, 262129, 0, 196609, 262130, 0, 196609, 262131, 0, 196609, 262132, 0, 196609, 262133, 0, 196609, 262134, 0, 196609, 262135, 0, 196609, 262136, 0, 196609, 262137, 0, 196609, 262138, 0, 196609, 262139, 0, 196609, 262140, 0, 196609, 262141, 0, 196610, 196637, 0, 131073, 196638, 0, 196619, 196639, 0, 196619, 196640, 0, 196619, 196641, 0, 196619, 196642, 0, 196619, 196643, 0, 196619, 196644, 0, 196619, 196645, 0, 196619, 196646, 0, 196619, 196647, 0, 196619, 196648, 0, 196619, 196649, 0, 196619, 196650, 0, 196619, 196651, 0, 196619, 196652, 0, 196619, 196653, 0, 131074, 327633, 0, 131073, 327634, 0, 196619, 327635, 0, 196619, 327636, 0, 196619, 327637, 0, 196619, 327638, 0, 196619, 327639, 0, 131074, 262173, 0, 131073, 262174, 0, 196619, 262175, 0, 196619, 262176, 0, 196619, 262177, 0, 196619, 262178, 0, 196619, 262179, 0, 196619, 262180, 0, 196619, 262181, 0, 196619, 262182, 0, 196619, 262183, 0, 196619, 262184, 0, 196619, 262185, 0, 196619, 262186, 0, 196619, 262187, 0, 196619, 262188, 0, 196619, 262189, 0, 131074, 393169, 0, 131073, 393170, 0, 196619, 393171, 0, 196619, 393172, 0, 196619, 393173, 0, 196619, 393174, 0, 196619, 393175, 0, 131074, 393191, 0, 196608, 393192, 0, 196609, 393193, 0, 196609, 393194, 0, 196609, 393195, 0, 196610, 327686, 0, 196608, 327687, 0, 196609, 327688, 0, 196609, 327689, 0, 196609, 327690, 0, 196610, 327709, 0, 131073, 327710, 0, 196619, 327711, 0, 196619, 327712, 0, 196619, 327713, 0, 196619, 327714, 0, 196619, 327715, 0, 196619, 327716, 0, 196619, 327717, 0, 196619, 327718, 0, 196619, 327719, 0, 196619, 327720, 0, 196619, 327721, 0, 196619, 327722, 0, 196619, 327723, 0, 196619, 327724, 0, 196619, 327725, 0, 131074, 458705, 0, 131073, 458706, 0, 196619, 458707, 0, 196619, 458708, 0, 196619, 458709, 0, 196619, 458710, 0, 196619, 458711, 0, 131074, 393245, 0, 131073, 393246, 0, 196619, 393247, 0, 196619, 393248, 0, 196619, 393249, 0, 196619, 393250, 0, 196619, 393251, 0, 196619, 393252, 0, 196619, 393253, 0, 196619, 393254, 0, 196619, 393255, 0, 196619, 393256, 0, 196619, 393257, 0, 196619, 393258, 0, 196619, 393259, 0, 196619, 393260, 0, 196619, 393261, 0, 131074, 524241, 0, 131073, 524242, 0, 196619, 524243, 0, 196619, 524244, 0, 196619, 524245, 0, 196619, 524246, 0, 196619, 524247, 0, 131074, 458781, 0, 131073, 458782, 0, 196619, 458783, 0, 196619, 458784, 0, 196619, 458785, 0, 196619, 458786, 0, 196619, 458787, 0, 196619, 458788, 0, 196619, 458789, 0, 196619, 458790, 0, 196619, 458791, 0, 196619, 458792, 0, 196619, 458793, 0, 196619, 458794, 0, 196619, 458795, 0, 196619, 458796, 0, 196619, 458797, 0, 131074, 589777, 0, 131073, 589778, 0, 196619, 589779, 0, 196619, 589780, 0, 196619, 589781, 0, 196619, 589782, 0, 196619, 589783, 0, 65539, 589784, 0, 65536, 589785, 0, 65536, 589786, 0, 65536, 589787, 0, 65536, 589788, 0, 65536, 589789, 0, 65536, 589790, 0, 65536, 589791, 0, 65536, 589792, 0, 65536, 589793, 0, 65536, 589794, 0, 65536, 589795, 0, 65536, 589796, 0, 65536, 589797, 0, 65536, 589798, 0, 65536, 589799, 0, 65536, 589800, 0, 65536, 589801, 0, 65536, 589802, 0, 65536, 589803, 0, 65536, 589804, 0, 65536, 589805, 0, 65536, 589806, 0, 65536, 589807, 0, 65536, 589808, 0, 65536, 589809, 0, 65536, 589810, 0, 65536, 589811, 0, 65536, 589812, 0, 65536, 589813, 0, 65536, 589814, 0, 65536, 589815, 0, 65536, 589816, 0, 65536, 589817, 0, 65536, 589818, 0, 65536, 589819, 0, 65536, 589820, 0, 65536, 589821, 0, 65536, 589822, 0, 65536, 589823, 0, 65536, 524288, 0, 65536, 524289, 0, 65536, 524290, 0, 65536, 524291, 0, 65536, 524292, 0, 65536, 524293, 0, 65536, 524294, 0, 65536, 524295, 0, 65536, 524296, 0, 65536, 524297, 0, 65536, 524298, 0, 65536, 524299, 0, 65536, 524300, 0, 65536, 524301, 0, 65536, 524302, 0, 65536, 524303, 0, 65536, 524304, 0, 65536, 524305, 0, 65536, 524306, 0, 65536, 524307, 0, 65536, 524308, 0, 65536, 524309, 0, 65536, 524310, 0, 65536, 524311, 0, 65536, 524312, 0, 65536, 524313, 0, 65536, 524314, 0, 65536, 524315, 0, 65536, 524316, 0, 65536, 524317, 0, 65540, 524318, 0, 196619, 524319, 0, 196619, 524320, 0, 196619, 524321, 0, 196619, 524322, 0, 196619, 524323, 0, 196619, 524324, 0, 196619, 524325, 0, 196619, 524326, 0, 196619, 524327, 0, 196619, 524328, 0, 196619, 524329, 0, 196619, 524330, 0, 196619, 524331, 0, 196619, 524332, 0, 196619, 524333, 0, 131074, 655313, 0, 65537, 655314, 0, 131072, 655315, 0, 131072, 655316, 0, 131072, 655317, 0, 131072, 655318, 0, 131072, 655319, 0, 131072, 655320, 0, 131072, 655321, 0, 131072, 655322, 0, 131072, 655323, 0, 131072, 655324, 0, 131072, 655325, 0, 131072, 655326, 0, 131072, 655327, 0, 131072, 655328, 0, 131072, 655329, 0, 131072, 655330, 0, 131072, 655331, 0, 131072, 655332, 0, 131072, 655333, 0, 131072, 655334, 0, 131072, 655335, 0, 131072, 655336, 0, 131072, 655337, 0, 131072, 655338, 0, 131072, 655339, 0, 131072, 655340, 0, 131072, 655341, 0, 131072, 655342, 0, 131072, 655343, 0, 131072, 655344, 0, 131072, 655345, 0, 131072, 655346, 0, 131072, 655347, 0, 131072, 655348, 0, 131072, 655349, 0, 131072, 655350, 0, 131072, 655351, 0, 131072, 655352, 0, 131072, 655353, 0, 131072, 655354, 0, 131072, 655355, 0, 131072, 655356, 0, 131072, 655357, 0, 131072, 655358, 0, 131072, 655359, 0, 131072, 589824, 0, 131072, 589825, 0, 131072, 589826, 0, 131072, 589827, 0, 131072, 589828, 0, 131072, 589829, 0, 131072, 589830, 0, 131072, 589831, 0, 131072, 589832, 0, 131072, 589833, 0, 131072, 589834, 0, 131072, 589835, 0, 131072, 589836, 0, 131072, 589837, 0, 131072, 589838, 0, 131072, 589839, 0, 131072, 589840, 0, 131072, 589841, 0, 131072, 589842, 0, 131072, 589843, 0, 131072, 589844, 0, 131072, 589845, 0, 131072, 589846, 0, 131072, 589847, 0, 131072, 589848, 0, 131072, 589849, 0, 131072, 589850, 0, 131072, 589851, 0, 131072, 589852, 0, 131072, 589853, 0, 131072, 589854, 0, 131072, 589855, 0, 131072, 589856, 0, 131072, 589857, 0, 131072, 589858, 0, 131072, 589859, 0, 131072, 589860, 0, 131072, 589861, 0, 131072, 589862, 0, 131072, 589863, 0, 131072, 589864, 0, 131072, 589865, 0, 131072, 589866, 0, 131072, 589867, 0, 131072, 589868, 0, 131072, 589869, 0, 65538 )
__meta__ = {
"_edit_lock_": true
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.5, 0.5 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -430.226, -472.262 )
motion_mirroring = Vector2( 1248, 1152 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 528.42, 436.24 )
scale = Vector2( 6.5, 4 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Targets" type="Node" parent="."]

[node name="Target" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 525.781, 455.377 )

[node name="Target2" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 1286.37, 250.192 )

[node name="Target3" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 1810.98, 465.827 )

[node name="Target4" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 1171.96, -85.4845 )

[node name="Target5" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 1598.69, 54.8494 )

[node name="Target6" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 2018.26, -182.859 )

[node name="Target7" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 1645.95, -194.315 )

[node name="Target8" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 1979.17, -339.853 )

[node name="Target10" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 1792.19, -378.46 )

[node name="Target9" parent="Targets" instance=ExtResource( 2 )]
position = Vector2( 2214.44, -479.278 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -1420.77, 475.06 )

[node name="Doors" type="Node2D" parent="."]
z_index = -1
__meta__ = {
"_edit_lock_": true
}

[node name="GithubDoor" parent="Doors" instance=ExtResource( 21 )]
position = Vector2( -843.525, 460 )

[node name="LinkedinDoor" parent="Doors" instance=ExtResource( 15 )]
position = Vector2( -335.57, 460 )

[node name="Door" parent="Doors" instance=ExtResource( 34 )]
position = Vector2( -621.311, 140.296 )
link = "https://cameronhu.ca/welcome/fate.html"
[connection signal="animation_finished" from="Instructions/Sprite3" to="." method="_on_Sprite3_animation_finished"]
